prevent overflowing

--- a/wp-content/themes/coopers/style.css
+++ b/wp-content/themes/coopers/style.css
@@ -1051,6 +1051,7 @@ textarea {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	overflow: hidden;
 }
 
 #to-do-list .background {
